[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Art/Walk Sprite.png" type="Texture" id=1]
[ext_resource path="res://Script/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/Jump Sprite.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/Climb Sprite.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/Press Button Sprite.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 769, 1200 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 769, 0, 769, 1200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1300, 0, 650, 1135 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 664, 0, 664, 1200 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 650, 1200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 650, 0, 650, 1200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1300, 0, 650, 1200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1950, 0, 650, 1200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 664, 1200 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Climb",
"speed": 8.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Air",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "Activate",
"speed": 1.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "IdleC",
"speed": 2.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
radius = 32.0
height = 52.0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 32, 69 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 30, 63.3333 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 30, 70 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="player" type="AnimatedSprite" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 0.14, 0.14 )
frames = SubResource( 11 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="Rope_detection" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rope_detection"]
shape = SubResource( 13 )

[node name="Trigger_detection" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger_detection"]
shape = SubResource( 14 )

[node name="Portal_detection" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal_detection"]
shape = SubResource( 15 )

[connection signal="area_entered" from="Rope_detection" to="." method="_on_Rope_area_entered"]
[connection signal="area_exited" from="Rope_detection" to="." method="_on_Rope_area_exited"]
[connection signal="area_entered" from="Trigger_detection" to="." method="_on_Trigger_detection_area_entered"]
[connection signal="area_exited" from="Trigger_detection" to="." method="_on_Trigger_detection_area_exited"]
[connection signal="area_entered" from="Portal_detection" to="." method="_on_Portal_detection_area_entered"]
[connection signal="area_exited" from="Portal_detection" to="." method="_on_Portal_detection_area_exited"]
